test/integration/bad/numeric-literal/real-bad5.stan
transformed data {
    real x = 12.3_e+10;
}